# Citrine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.gradle.kts  build.sh  crowdin.yml  gradle.properties  settings.gradle.kts  zapstore.yaml
.claude/hooks/: session-start.sh
.github/workflows/: build.yml  create-release.yml  crowdin.yml
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-universal-release.dm
app/release/baselineProfiles/1/: app-armeabi-v7a-release.dm
app/schemas/com.greenart7c3.citrine.database.AppDatabase/: 1.json  10.json  11.json  12.json  13.json  2.json  3.json  4.json  5.json  8.json  9.json
app/schemas/com.greenart7c3.citrine.database.HistoryDatabase/: 10.json  11.json  12.json  13.json  2.json  4.json  6.json  7.json
app/schemas/com.greenart7c3.citrine.logs.LogDatabase/: 1.json
app/src/androidTest/java/com/greenart7c3/citrine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nostrdb_jni.cpp
app/src/main/java/com/greenart7c3/citrine/: BootBroadcastReceiver.kt  Citrine.kt  CommandResult.kt  Connection.kt  CustomWebSocketServer.kt  DateUtils.kt  EOSE.kt  EventFilter.kt  EventRepository.kt  EventSubscription.kt  Extensions.kt  HttpClientManager.kt  MainActivity.kt  MainThreadChecker.kt  NoticeResult.kt  SubscriptionManager.kt  WebSocketServerService.kt
app/src/main/java/com/greenart7c3/citrine/database/: AppDatabase.kt  EventDao.kt  EventEntity.kt  EventFTS.kt  EventStore.kt  EventStoreFactory.kt  GroupDao.kt  GroupEntities.kt  IdAndCreatedAt.kt  NostrDb.kt  NostrDbEventStore.kt  RoomEventStore.kt  RustNostrEventStore.kt
app/src/main/java/com/greenart7c3/citrine/logs/: Log.kt  LogDao.kt  LogDatabase.kt  LogEntity.kt
app/src/main/java/com/greenart7c3/citrine/okhttp/: DefaultContentTypeInterceptor.kt  EncryptedBlobInterceptor.kt  EncryptionKeyCache.kt  HttpClientManager.kt  LoggingInterceptor.kt  OkHttpWebSocket.kt
app/src/main/java/com/greenart7c3/citrine/provider/: CitrineContentProvider.kt  CitrineContract.kt
app/src/main/java/com/greenart7c3/citrine/relays/: Client.kt  Constants.kt  EOSE.kt  JsonFilter.kt  Relay.kt  RelayPool.kt  RelaySetupInfo.kt  Subscription.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cy-rGB/: strings.xml
app/src/main/res/values-da-rDK/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-eo/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fo-rFO/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hr-rHR/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it-rIT/: strings.xml
app/src/main/res/values-iw-rIL/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-kk-rKZ/: strings.xml
app/src/main/res/values-ko-rKR/: strings.xml
app/src/main/res/values-lt-rLT/: strings.xml
app/src/main/res/values-ne-rNP/: strings.xml
app/src/main/res/values-pcm-rNG/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-ru-rUA/: strings.xml
app/src/main/res/values-sr-rSP/: strings.xml
app/src/main/res/values-sv-rSE/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-uz-rUZ/: strings.xml
app/src/main/res/values-vi-rVN/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/com/greenart7c3/citrine/: ExampleUnitTest.kt  ExecuteAllFanOutBenchmark.kt  ExpirationCheckBenchmark.kt  FipsManagerTest.kt  GroupStateTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/fips-bridge/: Cargo.toml  build-android.sh
rust/fips-bridge/src/: lib.rs  proxy.rs
scripts/: relay_bench.py  setup_nostrdb.sh
(+107 files in other folders)
