[package]
name = "citrine-fips"
version = "0.1.0"
edition = "2021"
description = "Embedded FIPS (fips.network) mesh node for the Citrine Nostr relay"
license = "MIT"
publish = false

[lib]
name = "citrine_fips"
crate-type = ["cdylib"]

[dependencies]
fips-endpoint = "=0.4.15"
jni = "0.21"
serde_json = "1"
smoltcp = { version = "0.12", default-features = false, features = ["std", "medium-ip", "proto-ipv6", "socket-tcp"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util", "macros"] }

[profile.release]
lto = true
strip = true
